--- a/include/style/main.css
+++ b/include/style/main.css
@@ -6,6 +6,7 @@ body {
   grid-template-rows: 75px auto 50px;
   height: 100vh;
   font-family: "Roboto", sans-serif;
+  color: #555;
 }
 
 header,
@@ -59,14 +60,36 @@ th {
   color: white;
 }
 
-nav form input[type="submit"]{
+label {
+  color: #b4886b;
+  font-weight: bold;
+  display: block;
+}
+
+label:after {
+  content: ": ";
+}
+
+input {
+  border-radius: 0.25em;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  border: 1px solid #555;
+}
+
+input:focus {
+  border: 2px solid #555;
+}
+
+nav form input[type="submit"] {
   margin: 4px;
   width: 85%;
   text-transform: uppercase;
 }
 
 input[type="submit"] {
-  border-radius: 5px;
+  border-radius: 0.25em;
   background-color: #7a2048;
   color: white;
   padding: 10px;
@@ -74,9 +97,21 @@ input[type="submit"] {
 }
 
 input[type="submit"]:hover {
-    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
+    0 17px 50px 0 rgba(0, 0, 0, 0.19);
 }
 
-.button-container{
+select{
+  width: 100%;
+  min-width: 200px;
+  max-width: 330px;
+  border: 1px solid #555;
+  border-radius: 0.25em;
+  padding: 0.25em 0.5em;
+  cursor: pointer;
+  line-height: 1.1;
+}
+
+.button-container {
   display: flex;
 }
