--- a/include/style/main.css
+++ b/include/style/main.css
@@ -34,7 +34,7 @@ nav {
 main {
   grid-column-start: 2;
   grid-column-end: 3;
-  padding: 30px;
+  padding: 2rem 4rem;
 }
 
 table {
@@ -114,4 +114,8 @@ select{
 
 .button-container {
   display: flex;
+}
+
+.marginTop{
+  margin-block-start: 6rem;
 }
