--- a/include/style/main.css
+++ b/include/style/main.css
@@ -22,13 +22,13 @@ footer {
   grid-row-start: 4;
   grid-row-end: 5;
   align-self: end;
-  padding: 10px 0;
+  padding: 1rem 0;
 }
 
 nav {
   grid-column-start: 1;
   grid-column-end: 2;
-  padding-top: 50px;
+  padding-block-start: 5rem;
 }
 
 main {
@@ -45,7 +45,7 @@ table {
 th,
 td {
   border: 1px solid #ddd;
-  padding: 8px;
+  padding-inline-start: 0.8rem;
 }
 
 tr:nth-child(even) {
@@ -53,8 +53,7 @@ tr:nth-child(even) {
 }
 
 th {
-  padding-top: 12px;
-  padding-bottom: 12px;
+  padding-block-start: 0.8rem;
   text-align: left;
   background-color: #408ec6;
   color: white;
@@ -71,11 +70,14 @@ label:after {
 }
 
 input {
+  font-family: "Roboto", sans-serif;
   border-radius: 0.25em;
-  padding: 12px 20px;
-  margin: 8px 0;
+  padding: 0.8rem;
+  margin: 0.4rem 0 0.9rem 0;
+  min-width: 10rem;
   box-sizing: border-box;
   border: 1px solid #555;
+  cursor: pointer;
 }
 
 input:focus {
@@ -83,7 +85,7 @@ input:focus {
 }
 
 nav form input[type="submit"] {
-  margin: 0px;
+  margin: 0;
   width: 100%;
   text-transform: uppercase;
   border-radius: 0;
@@ -102,8 +104,8 @@ input[type="submit"] {
   border-radius: 0.25em;
   background-color: #7a2048;
   color: white;
-  padding: 10px;
-  margin: 20px 5px;
+  padding: 0.7rem;
+  margin: 1.7rem 0.2rem;
 }
 
 input[type="submit"]:hover {
@@ -113,11 +115,11 @@ input[type="submit"]:hover {
 
 select{
   width: 100%;
-  min-width: 200px;
-  max-width: 330px;
+  max-width: 7rem;
   border: 1px solid #555;
   border-radius: 0.25em;
-  padding: 0.25em 0.5em;
+  padding: 0.5rem;
+  margin: 0 2rem 0 0.5rem;
   cursor: pointer;
   line-height: 1.1;
 }
@@ -132,4 +134,14 @@ select{
 
 .inline{
   display: inline;
+}
+
+.badMessage{
+  color: red;
+  font-weight: bold;
+}
+
+.goodMessage{
+  color: green;
+  font-weight: bold;
 }
